@@ -8,6 +8,9 @@ import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.Button;
 import javafx.scene.layout.StackPane;
+import javafx.scene.paint.Color;
+import javafx.scene.shape.Circle;
+import javafx.scene.shape.Rectangle;
 import javafx.stage.Stage;
 
 /**
@@ -16,6 +19,9 @@ import javafx.stage.Stage;
  // pobieramy SDK, struktura projektu i dorzucamy odpowiednie pliki
  // https://stackoverflow.com/questions/51478675/error-javafx-runtime-components-are-missing-and-are-required-to-run-this-appli
  // w opcjach uruchomienia dodajemy potrzebne komponenty javafx.fxml i javafx.graphics (uwaga! nie controls)
+
+ --module-path /path/javafx-sdk-11.0.2/lib
+ --add-modules javafx.controls,javafx.fxml
  */
 public class Application1 extends Application {
     @Override
@@ -32,6 +38,10 @@ public class Application1 extends Application {
 
         StackPane root = new StackPane();
         root.getChildren().add(btn);
+        Circle kolko = new Circle(0, 0, 100, Color.RED);
+        root.getChildren().add(kolko);
+        Rectangle rect = new Rectangle (10, 15, 30, 40);
+        root.getChildren().add(rect);
 
         Scene scene = new Scene(root, 300, 250);
 
